// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Image component matches Image snapshot, external asset 1`] = `
<Image
  accessibilityLabel="Image"
  accessible={false}
  blurRadius={1}
  capInsets={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  fadeDuration={300}
  height={100}
  loadingIndicatorSource={
    Array [
      Object {
        "testUri": "../../../assets/images/react-icon.png",
      },
      Object {
        "testUri": "../../../assets/images/react-icon.png",
      },
      Object {
        "testUri": "../../../assets/images/react-icon.png",
      },
    ]
  }
  onError={[Function]}
  onLayout={[Function]}
  onLoad={[Function]}
  onLoadEnd={[Function]}
  onLoadStart={[Function]}
  onPartialLoad={[Function]}
  onProgress={[Function]}
  progressiveRenderingEnabled={false}
  resizeMethod="auto"
  resizeMode="cover"
  source={
    Object {
      "uri": "https://facebook.github.io/react-native/img/tiny_logo.png",
    }
  }
  style={
    Array [
      Object {
        "height": 100,
        "width": 100,
      },
    ]
  }
  testID="testID"
  width={100}
/>
`;

exports[`Testing Image component matches Image snapshot, local asset 1`] = `
<Image
  accessibilityLabel="Image"
  accessible={false}
  blurRadius={1}
  capInsets={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  fadeDuration={300}
  height={100}
  loadingIndicatorSource={
    Array [
      Object {
        "testUri": "../../../assets/images/react-icon.png",
      },
      Object {
        "testUri": "../../../assets/images/react-icon.png",
      },
      Object {
        "testUri": "../../../assets/images/react-icon.png",
      },
    ]
  }
  onError={[Function]}
  onLayout={[Function]}
  onLoad={[Function]}
  onLoadEnd={[Function]}
  onLoadStart={[Function]}
  onPartialLoad={[Function]}
  onProgress={[Function]}
  progressiveRenderingEnabled={false}
  resizeMethod="auto"
  resizeMode="cover"
  source={
    Object {
      "testUri": "../../../assets/images/react-icon.png",
    }
  }
  style={
    Array [
      Object {
        "height": 100,
        "width": 100,
      },
    ]
  }
  testID="testID"
  width={100}
/>
`;
